fixing experience on smaller screens

--- a/src/app/experience/experience.component.css
+++ b/src/app/experience/experience.component.css
@@ -269,4 +269,8 @@ section {
    .experience:hover {
     max-height: 800px;
    }
+    .works {
+    max-height: 80vh;
+    overflow-y: auto;
+  }
 }
